--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@prisma/client": "^4.3.0",
     "axios": "^0.27.2",
     "dotenv": "^16.0.2",
-    "fastify": "^4.5.3"
+    "fastify": "^4.5.3",
+    "node-cron": "^3.0.2"
   },
   "devDependencies": {
     "@types/node": "^18.7.14",
+    "@types/node-cron": "^3.0.4",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
     "prisma": "^4.3.0",
