--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.27.2",
     "dotenv": "^16.0.2",
     "fastify": "^4.5.3",
+    "node-cache": "^5.1.2",
     "node-cron": "^3.0.2"
   },
   "devDependencies": {
