--- a/package.json
+++ b/package.json
@@ -12,24 +12,32 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@fastify/cors": "^8.1.0",
+    "@fastify/cors": "^8.2.0",
     "@fastify/sensible": "^5.1.1",
-    "@prisma/client": "^4.3.0",
-    "axios": "^0.27.2",
-    "dotenv": "^16.0.2",
-    "fastify": "^4.8.1",
+    "@prisma/client": "^4.6.1",
+    "axios": "^1.1.3",
+    "blocked": "^1.3.0",
+    "dotenv": "^16.0.3",
+    "fastify": "^4.9.2",
     "fastify-socket.io": "^4.0.0",
+    "ky": "^0.32.2",
     "node-cache": "^5.1.2",
-    "node-cron": "^3.0.2"
+    "node-cron": "^3.0.2",
+    "node-fetch": "^3.3.0",
+    "node-os-utils": "^1.3.7",
+    "os-utils": "^0.0.14"
   },
   "devDependencies": {
-    "@types/node": "^18.7.14",
-    "@types/node-cron": "^3.0.4",
-    "nodemon": "^2.0.19",
+    "@types/blocked": "^1.3.1",
+    "@types/node": "^18.11.9",
+    "@types/node-cron": "^3.0.6",
+    "@types/node-os-utils": "^1.3.0",
+    "@types/os-utils": "^0.0.1",
+    "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
-    "prisma": "^4.3.0",
+    "prisma": "^4.6.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.8.2"
+    "typescript": "^4.9.3"
   }
 }
