--- a/package.json
+++ b/package.json
@@ -12,26 +12,33 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cookie": "^8.3.0",
     "@fastify/cors": "^8.2.0",
     "@fastify/sensible": "^5.1.1",
     "@prisma/client": "^4.6.1",
     "axios": "^1.1.3",
+    "bcrypt": "^5.1.0",
     "blocked": "^1.3.0",
     "dotenv": "^16.0.3",
     "fastify": "^4.9.2",
     "fastify-socket.io": "^4.0.0",
+    "jsonwebtoken": "^8.5.1",
     "ky": "^0.32.2",
     "node-cache": "^5.1.2",
     "node-cron": "^3.0.2",
     "node-fetch": "^3.3.0",
     "node-os-utils": "^1.3.7",
+    "nodemailer": "^6.8.0",
     "os-utils": "^0.0.14"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/blocked": "^1.3.1",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.9",
     "@types/node-cron": "^3.0.6",
     "@types/node-os-utils": "^1.3.0",
+    "@types/nodemailer": "^6.4.6",
     "@types/os-utils": "^0.0.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
