--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "node-fetch": "^3.3.0",
     "node-os-utils": "^1.3.7",
     "nodemailer": "^6.8.0",
-    "os-utils": "^0.0.14"
+    "os-utils": "^0.0.14",
+    "throttled-queue": "^2.1.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
